--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "object.omit": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
