--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-import": "^2.17.2",
     "istanbul": "^0.4.5",
     "mocha": "^6.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1"
   }
