--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ cache:
 script:
   - npm test
 after_success:
-  - npm run coverage 
+  - npm install coveralls && npm run coverage
 notifications:
   email: false
