--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "object.omit": "^3.0.0"
+    "object.omit": "^3.0.0",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
