--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ before_script:
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 after_success:
-  - npm run coverage 
+  - npm run test 
 notifications:
   email: false
