--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,7 @@ script:
   - npm test
 after_success:
   - npm run coverage
+  - npm install codeclimate-test-reporter
+  - codeclimate-test-reporter < coverage/lcov.info
 notifications:
   email: false
