--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "WayFarer is a public bus transportation service",
   "main": "index.js",
   "scripts": {
-    "start": "babel-watch server.js",
-    "test": "nyc  --reporter=text mocha --require babel-register server/tests/*.js --exit --timeout 10000",
+    "start": "SET NODE_ENV=development& babel-watch server.js",
+    "test": "SET NODE_ENV=test& nyc  --reporter=text mocha --require babel-register server/tests/*.js --exit --timeout 10000",
     "test:watch": "mocha --watch",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
@@ -37,7 +37,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "object.omit": "^3.0.0"
+    "object.omit": "^3.0.0",
+    "pg": "^7.12.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
