--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
   - JWT_KEY=secret
 
 before_script:
-  - psql -c 'create database wayfarer-test;' -U postgres
+  - psql -c 'create database wayfarer_test;' -U postgres
 
 script:
   - npm test
