--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "WayFarer is a public bus transportation service",
   "main": "index.js",
   "scripts": {
-    "start": "SET NODE_ENV=development& babel-watch server.js",
-    "test": "SET NODE_ENV=test& nyc  --reporter=text mocha --require babel-register server/tests/*.js --exit --timeout 10000",
+    "start": "cross-env NODE_ENV=development babel-watch server.js",
+    "test": "cross-env NODE_ENV=test nyc  --reporter=text mocha --require babel-register server/tests/*.js --exit --timeout 10000",
     "test:watch": "mocha --watch",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
@@ -45,6 +45,7 @@
     "chai-http": "^4.3.0",
     "coverage": "^0.4.1",
     "coveralls": "^3.0.5",
+    "cross-env": "^5.2.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.17.2",
