--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "WayFarer is a public bus transportation service",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development babel-watch server.js",
+    "start": "cross-env NODE_ENV=development npm run createTables && cross-env NODE_ENV=development npm run superuser &&  cross-env NODE_ENV=development babel-watch server.js",
     "test": "cross-env NODE_ENV=test nyc  --reporter=text mocha --require babel-register server/tests/*.js --exit --timeout 10000",
     "test:watch": "mocha --watch",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
-    "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage"
+    "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage",
+    "superuser": "node --require @babel/register server/config/admin.js",
+    "createTables": "node --require @babel/register server/config/tableCreator.js",
+    "dropTables": "node --require @babel/register server/config/dropTables.js"
   },
   "repository": {
     "type": "git",
@@ -52,7 +55,6 @@
     "istanbul": "^0.4.5",
     "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.19.1",
     "nyc": "^14.1.1"
   }
 }
