--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
     "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage",
-    "superuser" :"babel-node server/config/admin.js",
+    "superuser": "babel-node server/config/admin.js",
     "createTables": "babel-node server/config/tableCreator.js",
     "dropTables": "babel-node server/config/dropTables.js"
   },
@@ -42,7 +42,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "object.omit": "^3.0.0",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
