--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "WayFarer is a public bus transportation service",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development babel-watch server.js",
+    "start": "cross-env NODE_ENV=development npm run dropTables && cross-env NODE_ENV=development npm run createTables && cross-env NODE_ENV=development npm run superuser && cross-env NODE_ENV=development babel-watch server.js",
     "test": "cross-env NODE_ENV=test nyc  --reporter=text mocha --require babel-register server/tests/*.js --exit --timeout 10000",
     "test:watch": "mocha --watch",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
-    "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage"
+    "coverage": "nyc npm test && npm run generate-lcov && npm run coveralls-coverage",
+    "superuser": "babel-node server/config/admin.js",
+    "createTables": "babel-node server/config/tableCreator.js",
+    "dropTables": "babel-node server/config/dropTables.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
   "dependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
+    "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.5.5",
     "babel-preset-env": "^1.7.0",
@@ -38,7 +42,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "object.omit": "^3.0.0",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -52,7 +57,6 @@
     "istanbul": "^0.4.5",
     "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.19.1",
     "nyc": "^14.1.1"
   }
 }
